--- a/web/appeal/appeal.html
+++ b/web/appeal/appeal.html
@@ -1,10 +1,21 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<title>SA Ban Appeal</title>
-	</head>
-	<body>
-		<h1>Welcome, {username}.</h1>
-		<p>You may appeal your ban from the Scratch Addons Discord server here.</p>
-	</body>
+    <head>
+        <title>SA Ban Appeal</title>
+        <link rel="stylesheet" href="./appeal.css">
+    </head>
+    <body>
+        <div class="nav">
+            <img src="./scradd.svg" class="scradd-nav">
+            Ban Appeal
+        </div>
+        <h1>Appeal your ban</h1>
+        <p>You are appealing as <span class="blurple">@{username}</span> on Discord.</p>
+        <div class="appeal-form">
+            <h4>1. Are you as disappointed in your behavior as we are?</h4>
+            <textarea placeholder="You may respond here."></textarea>
+            <button>Submit</button>
+            <p class="disclaimer">Submitting fake responses will only lower your chances of being unbanned from the Scratch Addons server.</p>
+        </div>
+    </body>
 </html>
