--- a/web/appeal.html
+++ b/web/appeal.html
@@ -1,24 +1,27 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 	<head>
+		<meta charset="utf-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>SA Ban Appeal</title>
-		<link rel="stylesheet" href="./appeal.css" />
+		<link rel="stylesheet" href="./style.css" />
+		<link rel="shortcut icon" href="./icon.png">
 	</head>
 	<body>
 		<div class="nav">
-			<img src="./scradd.svg" class="scradd-nav" />
+			<img src="./icon.png" class="scradd-nav" />
 			Ban Appeal
 		</div>
 		<h1>Appeal your ban</h1>
 		<p>You are appealing as <span class="blurple">@{username}</span> on Discord.</p>
-		<div class="appeal-form">
+		<form class="appeal-form">
 			<h4>1. Are you as disappointed in your behavior as we are?</h4>
 			<textarea placeholder="You may respond here."></textarea>
-			<button>Submit</button>
+			<button type="submit">Submit</button>
 			<p class="disclaimer">
 				Submitting fake responses will only lower your chances of being unbanned from the
 				Scratch Addons server.
 			</p>
-		</div>
+		</form>
 	</body>
 </html>
