--- a/web/appeal.html
+++ b/web/appeal.html
@@ -9,18 +9,32 @@
 	</head>
 	<body>
 		<div class="nav">
-			<img src="./icon.png" class="scradd-nav" />
-			Ban Appeal
+			<img src="./icon.png" class="scradd-nav" title="Logo" />
+			Scratch Addons Ban Appeal
 		</div>
 		<h1>Appeal your ban</h1>
 		<p>You are appealing as <span class="blurple">@{username}</span> on Discord.</p>
-		<form class="appeal-form">
-			<h4>1. Are you as disappointed in your behavior as we are?</h4>
-			<textarea placeholder="You may respond here."></textarea>
+		<form class="appeal-form" method="post">
+			<label>
+				Why were you banned?
+				<textarea name="ban" required placeholder="I was banned because..."></textarea>
+			</label>
+			<label>
+				Why should we unban you?
+				<textarea
+					name="unban"
+					required
+					placeholder="You should unban me because..."
+				></textarea>
+			</label>
+			<label>
+				Any additional comments?
+				<textarea name="misc"></textarea>
+			</label>
+			<input type="hidden" name="{token}" />
 			<button type="submit">Submit</button>
 			<p class="disclaimer">
-				Submitting fake responses will only lower your chances of being unbanned from the
-				Scratch Addons server.
+				Submitting fake responses will only lower your chances of being unbanned.
 			</p>
 		</form>
 	</body>
