add target blank rel noopener
Signed-off-by: RedGuy12 <paul@reid-family.org>

--- a/web/appeal.html
+++ b/web/appeal.html
@@ -1,5 +1,9 @@
 <h1>Appeal your ban</h1>
-<p>You are appealing as <a href="https://discord.com/users/{{id}}">@{{username}}</a> on Discord.</p>
+<p>
+	You are appealing as
+	<a target="_blank" rel="noopener" href="https://discord.com/users/{{id}}">@{{username}}</a> on
+	Discord.
+</p>
 <form class="appeal-form" method="post">
 	<label>
 		Why were you banned?
