--- a/modules/forms/answer.html
+++ b/modules/forms/answer.html
@@ -17,7 +17,7 @@
 <p>
 	Thank you for your patience. Unfortunately, we've decided not to unban
 	<a target="_blank" rel="noopener" href="https://discord.com/users/{{id}}">@{{username}}</a> from
-	our Discord server.
+	our Discord server. You can not appeal this decision again.
 </p>
 <div class="note red">{{note}}</div>
 {{/unbanned}} {{/note}}
@@ -27,7 +27,7 @@
 <h1>We've recieved your appeal</h1>
 <p>
 	Please be patient while we process your ban appeal. Our answer will be available on this page by
-	{{date}}. You are signed in as
+	<strong>{{date}}</strong>. You are signed in as
 	<a target="_blank" rel="noopener" href="https://discord.com/users/{{id}}">@{{username}}</a> on
 	Discord.
 </p>
