--- a/web/404.html
+++ b/web/404.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>4o4 Not Found</title>
+		<title>404 Not Found</title>
 		<link rel="stylesheet" href="./style.css" />
 		<link rel="shortcut icon" href="./icon.png" />
 	</head>
