Manually apply unicorn/string-content elsewhere
Signed-off-by: RedGuy12 <paul@reid-family.org>

--- a/web/404.html
+++ b/web/404.html
@@ -12,6 +12,6 @@
 			<img src="./icon.png" class="scradd-nav" title="Logo" />
 			404 Not Found
 		</div>
-		This page doesn't exist.
+		This page doesn’t exist.
 	</body>
 </html>
