--- a/modules/forms/appeals/answer.html
+++ b/modules/forms/appeals/answer.html
@@ -1,9 +1,9 @@
 {{#note}}
-<h1>We've reviewed your appeal</h1>
+<h1>We’ve reviewed your appeal</h1>
 
 {{#unbanned}}
 <p>
-	Thank you for your patience. We've decided to unban
+	Thank you for your patience. We’ve decided to unban
 	<a target="_blank" rel="noopener" href="https://discord.com/users/{{id}}">@{{username}}</a> from
 	our Discord server!
 </p>
@@ -15,7 +15,7 @@
 <!--  -->
 {{^unbanned}}
 <p>
-	Thank you for your patience. Unfortunately, we've decided not to unban
+	Thank you for your patience. Unfortunately, we’ve decided not to unban
 	<a target="_blank" rel="noopener" href="https://discord.com/users/{{id}}">@{{username}}</a> from
 	our Discord server. You can not appeal this decision again.
 </p>
@@ -24,7 +24,7 @@
 <!--  -->
 <!--  -->
 {{^note}}
-<h1>We've recieved your appeal</h1>
+<h1>We’ve recieved your appeal</h1>
 <p>
 	Please be patient while we process your ban appeal. Our answer will be available on this page by
 	<strong>{{date}}</strong>. You are signed in as
