--- a/modules/forms/frame.html
+++ b/modules/forms/frame.html
@@ -3,14 +3,14 @@
 	<head>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Scratch Addons Ban Appeal</title>
+		<title>Ban Appeal</title>
 		<link rel="stylesheet" href="./style.css" />
 		<link rel="shortcut icon" href="./icon.png" />
 	</head>
 	<body>
 		<div class="nav">
 			<img src="./icon.png" class="scradd-nav" title="Logo" />
-			Scratch Addons Ban Appeal
+			Ban Appeal
 		</div>
 		{{{content}}}
 	</body>
