fix(web): use absolute urls
Signed-off-by: RedGuy12 <61329810+RedGuy12@users.noreply.github.com>

--- a/web/404.html
+++ b/web/404.html
@@ -4,12 +4,12 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>404 Not Found</title>
-		<link rel="stylesheet" href="./style.css" />
-		<link rel="shortcut icon" href="./icon.png" />
+		<link rel="stylesheet" href="/style.css" />
+		<link rel="shortcut icon" href="/icon.png" />
 	</head>
 	<body>
 		<div class="nav">
-			<img src="./icon.png" class="scradd-nav" title="Logo" />
+			<img src="/icon.png" class="scradd-nav" title="Logo" />
 			404 Not Found
 		</div>
 		This page doesn’t exist.
