--- a/modules/forms/appeals/frame.html
+++ b/modules/forms/appeals/frame.html
@@ -4,13 +4,13 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Scratch Addons Ban Appeal</title>
-		<link rel="stylesheet" href="./style.css" />
-		<link rel="shortcut icon" href="./icon.png" />
+		<link rel="stylesheet" href="/style.css" />
+		<link rel="shortcut icon" href="/icon.png" />
 	</head>
 	<body>
 		<div class="nav">
-			<img src="./icon.png" class="scradd-nav" title="Logo" />
-			Scratch Addons Ban Appeal
+			<img src="/icon.png" class="scradd-nav" title="Logo" />
+			Ban Appeal
 		</div>
 		{{{content}}}
 	</body>
