dev(web): improve the nav html
Signed-off-by: RedGuy12 <61329810+RedGuy12@users.noreply.github.com>

--- a/modules/forms/appeals/frame.html
+++ b/modules/forms/appeals/frame.html
@@ -8,10 +8,10 @@
 		<link rel="shortcut icon" href="/icon.png" />
 	</head>
 	<body>
-		<div class="nav">
-			<img src="/icon.png" class="scradd-nav" title="Logo" />
+		<nav>
+			<img src="/icon.png" class="nav-logo" title="Logo" />
 			Ban Appeal
-		</div>
+		</nav>
 		{{{content}}}
 	</body>
 </html>
