--- a/web/404.html
+++ b/web/404.html
@@ -8,10 +8,10 @@
 		<link rel="shortcut icon" href="/icon.png" />
 	</head>
 	<body>
-		<div class="nav">
-			<img src="/icon.png" class="scradd-nav" title="Logo" />
+		<nav>
+			<img src="/icon.png" class="nav-logo" title="Logo" />
 			404 Not Found
-		</div>
+		</nav>
 		This page doesn’t exist.
 	</body>
 </html>
