feat(web): i spent too much time on this
Signed-off-by: RedGuy12 <61329810+RedGuy12@users.noreply.github.com>

--- a/modules/forms/appeals/frame.html
+++ b/modules/forms/appeals/frame.html
@@ -5,6 +5,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Scratch Addons Ban Appeal</title>
 		<link rel="stylesheet" href="/style.css" />
+		<script type="module" src="/client.js"></script>
 		<link rel="shortcut icon" href="/icon.png" />
 	</head>
 	<body>
