--- a/modules/suggestions/top.html
+++ b/modules/suggestions/top.html
@@ -5,6 +5,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Top Scratch Addons Suggestions</title>
 		<link rel="stylesheet" href="/style.css" />
+		<script type="module" src="/client.js"></script>
 		<link rel="stylesheet" href="/discord.css" />
 		<link rel="shortcut icon" href="/icon.png" />
 	</head>
@@ -51,17 +52,5 @@
 				</div>
 			</div>
 		</div>
-
-		<script>
-			const spoilers = document.querySelectorAll(".discord-spoiler");
-			for (const spoiler of spoilers) {
-				spoiler.addEventListener("click", () => {
-					if (spoiler.classList.contains("discord-spoiler")) {
-						spoiler.classList.remove("discord-spoiler");
-						spoiler.classList.add("discord-spoiler--revealed");
-					}
-				});
-			}
-		</script>
 	</body>
 </html>
