--- a/modules/forms/appeals/answer.html
+++ b/modules/forms/appeals/answer.html
@@ -4,8 +4,8 @@
 {{#unbanned}}
 <p>
 	Thank you for your patience. We’ve decided to unban
-	<a target="_blank" rel="noopener" href="https://discord.com/users/{{id}}">@{{username}}</a> from
-	our Discord server!
+	<a target="_blank" rel="noopener" href="https://discord.com/users/{{id}}">@{{username}}</a>
+	from our Discord server!
 </p>
 <div class="note green">{{note}}</div>
 <a target="_blank" rel="noopener" href="{{invite}}">
@@ -16,8 +16,8 @@
 {{^unbanned}}
 <p>
 	Thank you for your patience. Unfortunately, we’ve decided not to unban
-	<a target="_blank" rel="noopener" href="https://discord.com/users/{{id}}">@{{username}}</a> from
-	our Discord server. You can not appeal this decision again.
+	<a target="_blank" rel="noopener" href="https://discord.com/users/{{id}}">@{{username}}</a>
+	from our Discord server. You can not appeal this decision again.
 </p>
 <div class="note red">{{note}}</div>
 {{/unbanned}} {{/note}}
@@ -27,8 +27,9 @@
 <h1>We’ve recieved your appeal</h1>
 <p>
 	Please be patient while we process your ban appeal. Our answer will be available on this page by
-	<strong>{{date}}</strong>. You are signed in as
-	<a target="_blank" rel="noopener" href="https://discord.com/users/{{id}}">@{{username}}</a> on
-	Discord.
+	<strong>{{date}}</strong>
+	. You are signed in as
+	<a target="_blank" rel="noopener" href="https://discord.com/users/{{id}}">@{{username}}</a>
+	on Discord.
 </p>
 {{/note}}
