--- a/modules/forms/appeals/index.html
+++ b/modules/forms/appeals/index.html
@@ -1,8 +1,8 @@
 <h1>Appeal your ban</h1>
 <p>
 	You are appealing as
-	<a target="_blank" rel="noopener" href="https://discord.com/users/{{id}}">@{{username}}</a> on
-	Discord.
+	<a target="_blank" rel="noopener" href="https://discord.com/users/{{id}}">@{{username}}</a>
+	on Discord.
 </p>
 <form class="appeal-form" method="post">
 	<label>
