add answer descriptions to suggestion site
Signed-off-by: cobalt <61329810+RedGuy12@users.noreply.github.com>

--- a/modules/suggestions/suggestion.html
+++ b/modules/suggestions/suggestion.html
@@ -16,7 +16,7 @@
 		</nav>
 
 		<h1><a href="{{suggestion.url}}">{{suggestion.title}}</a></h1>
-		<div class="chip selected">
+		<div class="chip selected" title="{{suggestion.answer.description}}">
 			<img
 				src="{{suggestion.answer.emoji.url}}"
 				alt="{{suggestion.answer.emoji.name}}"
