fix(forms): Add another small note to ban appeals

--- a/modules/forms/appeals/answer.html
+++ b/modules/forms/appeals/answer.html
@@ -5,7 +5,9 @@
 <p>
 	Thank you for your patience. We’ve decided to unban
 	<a target="_blank" rel="noopener" href="https://discord.com/users/{{id}}">@{{username}}</a>
-	from our Discord server!
+	from our Discord server! Since you have been banned in the past, you will be expected to follow the
+	rules closer than other members might be. Please respect that. If you are banned again, you may not
+	be unbanned.
 </p>
 <div class="note green">{{note}}</div>
 <a target="_blank" rel="noopener" href="{{invite}}">
