Use a hardcoded list for suggestions instead of fetching them repeatedly, remove databases, refactor a lot of dead suggestions code, remove unused dependencies
Signed-off-by: cobalt <61329810+cobaltt7@users.noreply.github.com>

--- a/modules/suggestions/top.html
+++ b/modules/suggestions/top.html
@@ -43,9 +43,9 @@
 							{{{content}}}
 							<p>{{pageInfo}}</p>
 							{{#previousPage}}
-							<a href="?page={{previousPage}}{{all}}" class="chip">Previous page</a>
+							<a href="?page={{previousPage}}" class="chip">Previous page</a>
 							{{/previousPage}}{{#nextPage}}
-							<a href="?page={{nextPage}}{{all}}" class="chip">Next page</a>
+							<a href="?page={{nextPage}}" class="chip">Next page</a>
 							{{/nextPage}}
 						</span>
 					</div>
